kubeadm-single/yamlconfig/gatewayapi/nodeportGw/sharedgw.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sharedgw
spec: {}
status: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: sharedtls
spec: {}
status: {}
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-ciliumgateway-to-ref-secrets
  namespace: sharedtls
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: sharedgw
  to:
  - group: ""
    kind: Secret    
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gw-tls
  namespace: sharedgw
spec:
  gatewayClassName: nodeport-gateway-class
  listeners:
  - protocol: HTTPS
    port: 443
    name: cilium-gateway
    allowedRoutes:
      namespaces:
        from: All
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: k8scilium1tls
        namespace: sharedtls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-falco-ui
spec:
  parentRefs:
  - name: shared-gw-tls
    namespace: sharedgw
  hostnames:
  - "k8scilium1"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: falcosidekick-ui
      port: 2802
